<?xml version="1.0" encoding="utf-8"?>
<!--<Lift: A free software weight lifting tracking app>-->
<!--Copyright (C) <2019> <Anjandev Momi>-->
<!--email: anjan@momi.ca-->

<!--Lift is free software: you can redistribute it and/or modify it under the terms of the-->
<!--GNU General Public License as published by the Free Software Foundation, either version 3 of-->
<!--the License, or (at your option) any later version.-->

<!--Lift is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;-->
<!--without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.-->
<!--See the GNU General Public License for more details.-->

<!--You should have received a copy of the GNU General Public License along with this program.-->
<!--If not, see <https://www.gnu.org/licenses/>.-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.momi.lift.Workout">

    <Button
        android:id="@+id/doneWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="doneWork"
        android:text="@string/doneWork"
        app:layout_constraintStart_toStartOf="@+id/barbellRowRepsSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/barbellRowRepsSeekBar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="82dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/workoutawork2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/squatRepsSeekBar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="82dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/workoutawork3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/benchRepsSeekBar" />

    <SeekBar
        android:id="@+id/barbellRowSetSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="241dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:max="@string/maxNumOfSets"
        android:progress="0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <SeekBar
        android:id="@+id/barbellRowRepsSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="241dp"
        android:layout_height="46dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:max="@string/maxNumOfReps"
        android:progress="@string/maxNumOfReps"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barbellRowSetSeekBar" />

    <EditText
        android:id="@+id/barbellRowWeight"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/benchRepsSeekBar"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="donebarbellRow"
        android:text="@string/doneSet"
        app:layout_constraintLeft_toRightOf="@+id/barbellRowRepsSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/barbellRowSetSeekBar" />

    <SeekBar
        android:id="@+id/benchSetSeekbar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="241dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:max="@string/maxNumOfSets"
        android:progress="0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <SeekBar
        android:id="@+id/benchRepsSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="241dp"
        android:layout_height="46dp"
        android:layout_marginLeft="8dp"
        android:max="@string/maxNumOfReps"
        android:progress="@string/maxNumOfReps"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/benchSetSeekbar" />

    <EditText
        android:id="@+id/benchWeight"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/squatRepsSeekBar"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="doneBench"
        android:text="@string/doneSet"
        app:layout_constraintLeft_toRightOf="@+id/benchRepsSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/benchSetSeekbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="82dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:text="@string/workoutawork1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <SeekBar
        android:id="@+id/squatSetSeekbar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="241dp"
        android:layout_height="25dp"
        android:max="@string/maxNumOfSets"
        android:progress="0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <SeekBar
        android:id="@+id/squatRepsSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="241dp"
        android:layout_height="46dp"
        android:max="@string/maxNumOfReps"
        android:progress="@string/maxNumOfReps"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/squatSetSeekbar" />

    <EditText
        android:id="@+id/squatWeight"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doneSet"
        app:layout_constraintLeft_toRightOf="@+id/squatRepsSeekBar"
        android:layout_marginLeft="11dp"
        android:onClick="doneSquat"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/squatSetSeekbar" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
